feat: near connection wallet, custom dev client

--- a/app.json
+++ b/app.json
@@ -25,10 +25,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.dreamqip.Treadle"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "19a5ef92-89b0-40ce-9798-550d5fa5a41c"
+      }
     }
   }
 }
