--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "buffer": "^6.0.3",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
+    "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
+    "near-api-js": "^1.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
