--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,11 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "developmentClient": true,
+      "ios": {
+        "enterpriseProvisioning": "universal"
+      }
     },
     "production": {}
   },
