--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
+    "expo-secure-store": "~11.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
@@ -35,7 +36,8 @@
     "react-native-paper": "5.0.0-rc.9",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
