--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,61 @@
-node_modules/
-.expo/
-dist/
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+# Monorepo
+apps/*/credentials.json
+apps/*/build
+packages/*/build
+
+# Turborepo
+.turbo
+
+# Expo
+.expo
+__generated__
+web-build
 
 # macOS
 .DS_Store
 
-# JetBrains
-.idea/
+# Node
+node_modules
+npm-debug.log
+yarn-error.log
+package-lock.json
 
-yarn.lock
+# Ruby
+.direnv
+
+# Emacs
+*~
+
+# Vim
+.*.swp
+.*.swo
+.*.swn
+.*.swm
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Xcode
+*.pbxuser
+!default.pbxuser
+*.xccheckout
+*.xcscmblueprint
+xcuserdata
+
+# Android Studio
+*.iml
+.gradle
+.idea/libraries
+.idea/workspace.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+
+# Eclipse
+.project
+.settings
+
+# VSCode
+.history/
