--- a/package.json
+++ b/package.json
@@ -1,55 +1,20 @@
 {
-  "name": "mobile-ui",
+  "name": "treadle",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
-    "buffer": "^6.0.3",
-    "expo": "~46.0.16",
-    "expo-asset": "~8.6.1",
-    "expo-constants": "~13.2.4",
-    "expo-dev-client": "~1.3.1",
-    "expo-font": "~10.2.1",
-    "expo-linking": "~3.2.2",
-    "expo-secure-store": "~11.3.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-system-ui": "~1.3.0",
-    "expo-web-browser": "~11.0.0",
-    "near-api-js": "^1.1.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-paper": "5.0.0-rc.9",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "zustand": "^4.1.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
-    "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
-    "react-test-renderer": "18.0.0",
-    "typescript": "~4.3.5"
-  },
+  "license": "MIT",
   "private": true,
-  "eslintConfig": {
-    "extends": "universe/native"
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "devDependencies": {
+    "turbo": "^1.6.3",
+    "typescript": "^4.8.4"
+  },
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "start": "turbo run start",
+    "test": "turbo run test"
   }
 }
