--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "turbo": "^1.6.3",
     "typescript": "^4.8.4"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --parallel",
     "start": "turbo run start",
     "test": "turbo run test"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
