--- a/packages/treadle-mockup-server/package.json
+++ b/packages/treadle-mockup-server/package.json
@@ -11,13 +11,15 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn tsc",
+    "test": "yarn jest",
     "start": "node ./build/index.js"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.1",
     "@types/node": "^18.11.9",
-    "typescript": "^4.8.4",
     "bn.js": "^5.2.1",
-    "near-api-js": "^1.1.0"
+    "jest": "^29.3.0",
+    "near-api-js": "^1.1.0",
+    "typescript": "^4.8.4"
   }
 }
