--- a/packages/treadle-mockup-server/package.json
+++ b/packages/treadle-mockup-server/package.json
@@ -16,10 +16,12 @@
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.1",
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "bn.js": "^5.2.1",
     "jest": "^29.3.0",
     "near-api-js": "^1.1.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
