--- a/packages/treadle-mockup-server/package.json
+++ b/packages/treadle-mockup-server/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn tsc",
-    "test": "yarn jest",
+    "test": "jest",
     "start": "node ./build/index.js"
   },
   "devDependencies": {
@@ -19,7 +19,7 @@
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "bn.js": "^5.2.1",
-    "jest": "^29.3.0",
+    "jest": "^29.2.2",
     "near-api-js": "^1.1.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
