--- a/packages/treadle-mockup-server/tsconfig.json
+++ b/packages/treadle-mockup-server/tsconfig.json
@@ -2,13 +2,10 @@
   "compilerOptions": {
     "target": "es5",                          
     "module": "commonjs",                    
-    "lib": ["es6"],                     
-    "allowJs": true,
-    "outDir": "build",                          
-    "rootDir": "./src",
-    "strict": true,         
-    "noImplicitAny": true,
+    "outDir": "./dist",
+    "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   }
 }
