--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -45,8 +45,13 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
+    "eslint-config-universe": "^11.1.1",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.0.0",
     "typescript": "~4.3.5"
   },
