--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "buffer": "^6.0.3",
+    "deepmerge": "^4.2.2",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
@@ -29,6 +31,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
+    "nativewind": "^2.0.11",
     "near-api-js": "^1.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -53,6 +56,7 @@
     "jest-expo": "~44.0.1",
     "prettier": "^2.7.1",
     "react-test-renderer": "18.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "~4.3.5"
   },
   "private": true,
