feat: garage screen bike's carousel

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -8,11 +8,7 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "developmentClient": true,
-      "ios": {
-        "enterpriseProvisioning": "universal"
-      }
+      "distribution": "internal"
     },
     "production": {}
   },
