--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@faker-js/faker": "^7.6.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.2",
@@ -22,6 +23,7 @@
     "deepmerge": "^4.2.2",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
+    "expo-blur": "~11.2.0",
     "expo-constants": "~13.2.4",
     "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.1",
@@ -37,7 +39,11 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-paper": "5.0.0-rc.9",
+    "react-native-reanimated": "^2.12.0",
+    "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
@@ -46,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
