--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -45,6 +45,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.70.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "5.0.0-rc.9",
