--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "expo start --dev-client",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "eslint .",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "start": "expo start --dev-client"
   },
   "jest": {
     "preset": "jest-expo"
@@ -24,7 +25,7 @@
     "@tensorflow/tfjs-react-native": "^0.8.0",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
-    "expo": "~47.0.3",
+    "expo": "~47.0.5",
     "expo-asset": "~8.6.2",
     "expo-camera": "^13.0.0",
     "expo-constants": "~14.0.2",
@@ -36,13 +37,13 @@
     "expo-location": "^15.0.1",
     "expo-secure-store": "~12.0.0",
     "expo-sensors": "^12.0.1",
-    "expo-splash-screen": "~0.17.4",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
     "haversine": "^1.1.1",
     "nativewind": "^2.0.11",
     "near-api-js": "^1.1.0",
-    "react": "18.2.0",
+    "react": "18.1.0",
     "react-dom": "18.2.0",
     "react-native": "0.70.5",
     "react-native-confetti-cannon": "^1.5.2",
