--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -44,7 +44,7 @@
     "nativewind": "^2.0.11",
     "near-api-js": "^1.1.0",
     "react": "18.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-fast-image": "^8.6.3",
@@ -52,7 +52,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "5.0.0-rc.9",
-    "react-native-reanimated": "^2.12.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
