--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,7 +25,7 @@
     "@tensorflow/tfjs-react-native": "^0.8.0",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
-    "expo": "~47.0.5",
+    "expo": "~47.0.6",
     "expo-asset": "~8.6.2",
     "expo-camera": "^13.0.0",
     "expo-constants": "~14.0.2",
@@ -44,7 +44,7 @@
     "nativewind": "^2.0.11",
     "near-api-js": "^1.1.0",
     "react": "18.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-fast-image": "^8.6.3",
@@ -52,7 +52,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "5.0.0-rc.9",
-    "react-native-reanimated": "^2.12.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
