--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -50,12 +50,15 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-progress": "^1.2.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "5.0.0-rc.9",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.0",
     "treadle-mockup-server": "*",
     "zustand": "^4.1.4"
