--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "jsEngine": "hermes",
+    "jsEngine": "jsc",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "cover"
@@ -36,7 +36,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "19a5ef92-89b0-40ce-9798-550d5fa5a41c"
+        "projectId": "ffccbbad-605f-442e-a266-a8f9211cf66d"
       }
     }
   }
